--- a/IlluminationApp/IlluminationApp.csproj
+++ b/IlluminationApp/IlluminationApp.csproj
@@ -55,8 +55,12 @@
     <Compile Include="IlluminationForm.Designer.cs">
       <DependentUpon>IlluminationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Notification.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="IlluminationForm.resx">
+      <DependentUpon>IlluminationForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -79,6 +83,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Resources\lampsoff.png" />
+    <Content Include="Resources\lampson.png" />
+    <Content Include="Resources\lampsoriginal.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
