--- a/SomiodWebService/SomiodWebService.csproj
+++ b/SomiodWebService/SomiodWebService.csproj
@@ -121,7 +121,8 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\ApplicationController.cs" />
+    <Compile Include="Controllers\SomiodController.cs" />
+    <Compile Include="EntityConfigurations\ContainerConfiguration.cs" />
     <Compile Include="EntityConfigurations\ApplicationConfiguration.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -130,8 +131,15 @@
     <Compile Include="Migrations\202312301307578_InitialMigration.designer.cs">
       <DependentUpon>202312301307578_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202312301549240_ContainerTable.cs" />
+    <Compile Include="Migrations\202312301549240_ContainerTable.designer.cs">
+      <DependentUpon>202312301549240_ContainerTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Application.cs" />
+    <Compile Include="Models\ChildResource.cs" />
+    <Compile Include="Models\Resource.cs" />
+    <Compile Include="Models\Container.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SomiodDbContext.cs" />
   </ItemGroup>
@@ -150,6 +158,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202312301307578_InitialMigration.resx">
       <DependentUpon>202312301307578_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202312301549240_ContainerTable.resx">
+      <DependentUpon>202312301549240_ContainerTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
