--- a/SomiodWebService/SomiodWebService.csproj
+++ b/SomiodWebService/SomiodWebService.csproj
@@ -122,6 +122,7 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\SomiodController.cs" />
+    <Compile Include="EntityConfigurations\SubscriptionConfiguration.cs" />
     <Compile Include="EntityConfigurations\ContainerConfiguration.cs" />
     <Compile Include="EntityConfigurations\ApplicationConfiguration.cs" />
     <Compile Include="Global.asax.cs">
@@ -135,11 +136,16 @@
     <Compile Include="Migrations\202312301549240_ContainerTable.designer.cs">
       <DependentUpon>202312301549240_ContainerTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202312301806500_SubscriptionTable.cs" />
+    <Compile Include="Migrations\202312301806500_SubscriptionTable.designer.cs">
+      <DependentUpon>202312301806500_SubscriptionTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Application.cs" />
-    <Compile Include="Models\ChildResource.cs" />
-    <Compile Include="Models\Resource.cs" />
+    <Compile Include="Models\BaseModels\ChildResource.cs" />
+    <Compile Include="Models\BaseModels\Resource.cs" />
     <Compile Include="Models\Container.cs" />
+    <Compile Include="Models\Subscription.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SomiodDbContext.cs" />
   </ItemGroup>
@@ -161,6 +167,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202312301549240_ContainerTable.resx">
       <DependentUpon>202312301549240_ContainerTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202312301806500_SubscriptionTable.resx">
+      <DependentUpon>202312301806500_SubscriptionTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
