--- a/SomiodWebService/SomiodWebService.csproj
+++ b/SomiodWebService/SomiodWebService.csproj
@@ -122,6 +122,7 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\SomiodController.cs" />
+    <Compile Include="EntityConfigurations\DataConfiguration.cs" />
     <Compile Include="EntityConfigurations\SubscriptionConfiguration.cs" />
     <Compile Include="EntityConfigurations\ContainerConfiguration.cs" />
     <Compile Include="EntityConfigurations\ApplicationConfiguration.cs" />
@@ -140,11 +141,16 @@
     <Compile Include="Migrations\202312301806500_SubscriptionTable.designer.cs">
       <DependentUpon>202312301806500_SubscriptionTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202312301934048_DataTable.cs" />
+    <Compile Include="Migrations\202312301934048_DataTable.designer.cs">
+      <DependentUpon>202312301934048_DataTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Application.cs" />
     <Compile Include="Models\BaseModels\ChildResource.cs" />
     <Compile Include="Models\BaseModels\Resource.cs" />
     <Compile Include="Models\Container.cs" />
+    <Compile Include="Models\Data.cs" />
     <Compile Include="Models\Subscription.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SomiodDbContext.cs" />
@@ -170,6 +176,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202312301806500_SubscriptionTable.resx">
       <DependentUpon>202312301806500_SubscriptionTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202312301934048_DataTable.resx">
+      <DependentUpon>202312301934048_DataTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
