--- a/SwitchApp/App.config
+++ b/SwitchApp/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SwitchApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <applicationSettings>
+        <SwitchApp.Properties.Settings>
+            <setting name="ApiBaseUri" serializeAs="String">
+                <value>http://localhost:62193/</value>
+            </setting>
+            <setting name="AppName" serializeAs="String">
+                <value>illumination</value>
+            </setting>
+            <setting name="ContainerToSendData" serializeAs="String">
+                <value>illumination</value>
+            </setting>
+            <setting name="ContainerName" serializeAs="String">
+                <value>illumination</value>
+            </setting>
+            <setting name="ApiErrorManual" serializeAs="String">
+                <value>422</value>
+            </setting>
+        </SwitchApp.Properties.Settings>
+    </applicationSettings>
 </configuration>
