--- a/IlluminationApp/App.config
+++ b/IlluminationApp/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="IlluminationApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -11,4 +16,35 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <IlluminationApp.Properties.Settings>
+      <setting name="ApiBaseUri" serializeAs="String">
+        <value>http://localhost:62193/</value>
+      </setting>
+      <setting name="BrokerIp" serializeAs="String">
+        <value>127.0.0.1</value>
+      </setting>
+      <setting name="Topic" serializeAs="String">
+        <value>illumination</value>
+      </setting>
+      <setting name="AppName" serializeAs="String">
+        <value>illumination</value>
+      </setting>
+      <setting name="ApiErrorManual" serializeAs="String">
+        <value>422</value>
+      </setting>
+      <setting name="ContainerName" serializeAs="String">
+        <value>illumination</value>
+      </setting>
+      <setting name="SubscriptionName" serializeAs="String">
+        <value>subscription</value>
+      </setting>
+      <setting name="EventType" serializeAs="String">
+        <value>CREATE</value>
+      </setting>
+      <setting name="Endpoint" serializeAs="String">
+        <value>127.0.0.1</value>
+      </setting>
+    </IlluminationApp.Properties.Settings>
+  </applicationSettings>
 </configuration>
