--- a/SwitchApp/Properties/Settings.settings
+++ b/SwitchApp/Properties/Settings.settings
@@ -1,7 +1,21 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SwitchApp.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="ApiBaseUri" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://localhost:62193/</Value>
+    </Setting>
+    <Setting Name="AppName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">illumination</Value>
+    </Setting>
+    <Setting Name="ContainerToSendData" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">illumination</Value>
+    </Setting>
+    <Setting Name="ContainerName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">illumination</Value>
+    </Setting>
+    <Setting Name="ApiErrorManual" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">422</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
