--- a/SwitchApp/SwitchApp.csproj
+++ b/SwitchApp/SwitchApp.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\App.cs" />
+    <Compile Include="Models\Container.cs" />
+    <Compile Include="Models\Data.cs" />
+    <Compile Include="Models\Error.cs" />
     <Compile Include="SwitchForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +86,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\switchimage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="RestSharp">
+      <Version>110.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
