--- a/IlluminationApp/App.config
+++ b/IlluminationApp/App.config
@@ -40,10 +40,10 @@
         <value>subscription</value>
       </setting>
       <setting name="EventType" serializeAs="String">
-        <value>CREATE</value>
+        <value>12</value>
       </setting>
       <setting name="Endpoint" serializeAs="String">
-        <value>127.0.0.1</value>
+        <value>mqtt://127.0.0.1</value>
       </setting>
     </IlluminationApp.Properties.Settings>
   </applicationSettings>
