--- a/SwitchApp/App.config
+++ b/SwitchApp/App.config
@@ -19,11 +19,11 @@
             <setting name="ContainerToSendData" serializeAs="String">
                 <value>illumination</value>
             </setting>
-            <setting name="ContainerName" serializeAs="String">
-                <value>illumination</value>
-            </setting>
             <setting name="ApiErrorManual" serializeAs="String">
                 <value>422</value>
+            </setting>
+            <setting name="OwnAppName" serializeAs="String">
+                <value>switch</value>
             </setting>
         </SwitchApp.Properties.Settings>
     </applicationSettings>
