--- a/SwitchApp/Properties/Settings.settings
+++ b/SwitchApp/Properties/Settings.settings
@@ -11,11 +11,11 @@
     <Setting Name="ContainerToSendData" Type="System.String" Scope="Application">
       <Value Profile="(Default)">illumination</Value>
     </Setting>
-    <Setting Name="ContainerName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">illumination</Value>
-    </Setting>
     <Setting Name="ApiErrorManual" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">422</Value>
+    </Setting>
+    <Setting Name="OwnAppName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">switch</Value>
     </Setting>
   </Settings>
 </SettingsFile>
