--- a/IlluminationApp/App.config
+++ b/IlluminationApp/App.config
@@ -25,25 +25,22 @@
         <value>127.0.0.1</value>
       </setting>
       <setting name="Topic" serializeAs="String">
-        <value>illumination</value>
+        <value>light_bulb</value>
       </setting>
       <setting name="AppName" serializeAs="String">
         <value>illumination</value>
       </setting>
-      <setting name="ApiErrorManual" serializeAs="String">
-        <value>422</value>
-      </setting>
       <setting name="ContainerName" serializeAs="String">
-        <value>illumination</value>
+        <value>light_bulb</value>
       </setting>
       <setting name="SubscriptionName" serializeAs="String">
-        <value>subscription</value>
+        <value>sub</value>
       </setting>
       <setting name="EventType" serializeAs="String">
         <value>12</value>
       </setting>
       <setting name="Endpoint" serializeAs="String">
-        <value>mqtt://127.0.0.1</value>
+        <value>127.0.0.1</value>
       </setting>
     </IlluminationApp.Properties.Settings>
   </applicationSettings>
