--- a/SwitchApp/App.config
+++ b/SwitchApp/App.config
@@ -17,10 +17,7 @@
                 <value>illumination</value>
             </setting>
             <setting name="ContainerToSendData" serializeAs="String">
-                <value>illumination</value>
-            </setting>
-            <setting name="ApiErrorManual" serializeAs="String">
-                <value>422</value>
+                <value>light_bulb</value>
             </setting>
             <setting name="OwnAppName" serializeAs="String">
                 <value>switch</value>
