--- a/IlluminationApp/IlluminationApp.csproj
+++ b/IlluminationApp/IlluminationApp.csproj
@@ -90,8 +90,11 @@
     <Compile Include="IlluminationForm.Designer.cs">
       <DependentUpon>IlluminationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\App.cs" />
+    <Compile Include="Models\Application.cs" />
+    <Compile Include="Models\BaseModels\ChildResource.cs" />
+    <Compile Include="Models\BaseModels\Resource.cs" />
     <Compile Include="Models\Container.cs" />
+    <Compile Include="Models\Data.cs" />
     <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Notification.cs" />
     <Compile Include="Models\Subscription.cs" />
