--- a/IlluminationApp/Properties/Settings.settings
+++ b/IlluminationApp/Properties/Settings.settings
@@ -9,25 +9,22 @@
       <Value Profile="(Default)">127.0.0.1</Value>
     </Setting>
     <Setting Name="Topic" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">illumination</Value>
+      <Value Profile="(Default)">light_bulb</Value>
     </Setting>
     <Setting Name="AppName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">illumination</Value>
     </Setting>
-    <Setting Name="ApiErrorManual" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">422</Value>
-    </Setting>
     <Setting Name="ContainerName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">illumination</Value>
+      <Value Profile="(Default)">light_bulb</Value>
     </Setting>
     <Setting Name="SubscriptionName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">subscription</Value>
+      <Value Profile="(Default)">sub</Value>
     </Setting>
     <Setting Name="EventType" Type="System.String" Scope="Application">
       <Value Profile="(Default)">12</Value>
     </Setting>
     <Setting Name="Endpoint" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">mqtt://127.0.0.1</Value>
+      <Value Profile="(Default)">127.0.0.1</Value>
     </Setting>
   </Settings>
 </SettingsFile>
