--- a/SomiodWebService/SomiodWebService.csproj
+++ b/SomiodWebService/SomiodWebService.csproj
@@ -152,6 +152,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Somiod.mdf" />
+    <Content Include="App_Data\Somiod_log.ldf">
+      <DependentUpon>Somiod.mdf</DependentUpon>
+    </Content>
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -214,9 +218,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202312301307578_InitialMigration.resx">
       <DependentUpon>202312301307578_InitialMigration.cs</DependentUpon>
